# Gitus

./: README.md
gitus/: CMakeLists.txt  gitus.cpp
gitus/git/: Add.cpp  Add.h  CMakeLists.txt  Init.cpp  Init.h
gitus/tests/: CMakeLists.txt  dummytest.cpp
